samples/_failures_safe/1760888468_a44292_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b795375f.c: In function ‘main’:
./samples/SAFE/__tmp_b795375f.c:146:12: error: missing terminating " character
  146 |     printf("Analysis completed
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b795375f.c:146:5: error: expected expression at end of input
  146 |     printf("Analysis completed
      |     ^~~~~~
./samples/SAFE/__tmp_b795375f.c:146:5: error: expected declaration or statement at end of input
